update swaggers
